Update and rename _config.yml to (root)/_config.yml

--- a/(root)/_config.yml
+++ b/(root)/_config.yml
@@ -4,7 +4,7 @@ author: Dino
 email: your-email@domain.com
 description: A GH blog
 twitter_username: jekyllrb
-github_username:  paulinechong
+github_username:  PaulineChong
 
 # Build settings
 markdown: kramdown
